force-app/main/default/objects/Quote/fields/CancellationReasonNote__c.field-meta.xml
<CustomField>
    <fullName>CancellationReasonNote__c</fullName>
    <label>Cancellation Reason Note</label>
    <type>TextArea</type>
</CustomField>