force-app/main/default/objects/Quote/fields/CloseLostReason__c.field-meta.xml
<CustomField>
    <fullName>CloseLostReason__c</fullName>
    <label>Verweigerungsgrund</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anbieterwechsel ausgeschlossen</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
            <value>
                <fullName>Umstellung zu aufwendig</fullName>
            </value>
            <value>
                <fullName>Wettbewerb Bundle-Produkt günstiger</fullName>
            </value>
            <value>
                <fullName>Wettbewerb Cuda/Coax</fullName>
            </value>
            <value>
                <fullName>Wettbewerb Glasfaser</fullName>
            </value>
            <value>
                <fullName>Negative Bauentscheidung</fullName>
            </value>
            <value>
                <fullName>Bau nur möglich mit zusätzlichen Kosten</fullName>
            </value>
            <value>
                <fullName>Bau technisch nicht möglich</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>