force-app/main/default/objects/Quote/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>