force-app/main/default/objects/Quote/fields/EmailSentDate__c.field-meta.xml
<CustomField>
    <fullName>EmailSentDate__c</fullName>
    <label>EmailSentDate</label>
    <type>Date</type>
</CustomField>