force-app/main/default/objects/Quote/fields/IsExpired__c.field-meta.xml
<CustomField>
    <fullName>IsExpired__c</fullName>
    <description>Used to understand if a Quote is expired or not</description>
    <formula>ExpirationDate  &lt; TODAY()  &amp;&amp;  ISPICKVAL( Status ,&apos;Presented&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>