force-app/main/default/objects/Quote/fields/MarketingPhase__c.field-meta.xml
<CustomField>
    <fullName>MarketingPhase__c</fullName>
    <label>Marketing Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Phases</valueSetName>
    </valueSet>
</CustomField>