force-app/main/default/objects/Quote/fields/MaxBandwidthFromAPI__c.field-meta.xml
<CustomField>
    <fullName>MaxBandwidthFromAPI__c</fullName>
    <label>MaxBandwidthFromAPI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>10000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>