force-app/main/default/objects/Quote/fields/NoteCloseLostReason__c.field-meta.xml
<CustomField>
    <fullName>NoteCloseLostReason__c</fullName>
    <label>Begründung warum verloren</label>
    <type>TextArea</type>
</CustomField>