force-app/main/default/objects/Quote/fields/PartnerContractId__c.field-meta.xml
<CustomField>
    <fullName>PartnerContractId__c</fullName>
    <label>Partnervertrags-Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>