force-app/main/default/objects/Quote/fields/PlusNet_Calc_PremiseId__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_Calc_PremiseId__c</fullName>
    <formula>vlocity_cmt__DefaultPremisesId__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlusNet Calc PremiseId</label>
    <type>Text</type>
</CustomField>