force-app/main/default/objects/Quote/fields/QuoteOwner__c.field-meta.xml
<CustomField>
    <fullName>QuoteOwner__c</fullName>
    <formula>( Owner:User.FirstName ) +&apos; &apos; + ( Owner:User.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteOwner</label>
    <type>Text</type>
</CustomField>