force-app/main/default/objects/Quote/fields/ServiceAddress__c.field-meta.xml
<CustomField>
    <fullName>ServiceAddress__c</fullName>
    <formula>vlocity_cmt__DefaultPremisesId__r.vlocity_cmt__StreetAddress__c + &quot;, &quot; + vlocity_cmt__DefaultPremisesId__r.vlocity_cmt__City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Address</label>
    <type>Text</type>
</CustomField>