force-app/main/default/objects/Quote/fields/ShipHouseNo__c.field-meta.xml
<CustomField>
    <fullName>ShipHouseNo__c</fullName>
    <label>Hausnummer Lieferanschrift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>