force-app/main/default/objects/Quote/fields/ShippingCompany__c.field-meta.xml
<CustomField>
    <fullName>ShippingCompany__c</fullName>
    <label>Ship To Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>