force-app/main/default/objects/Quote/fields/SubDealerId__c.field-meta.xml
<CustomField>
    <fullName>SubDealerId__c</fullName>
    <label>UVP-Id</label>
    <length>14</length>
    <type>Text</type>
</CustomField>