force-app/main/default/objects/Quote/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
                <label>Dienst</label>
            </value>
            <value>
                <fullName>Connection</fullName>
                <label>Anbindung</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>