force-app/main/default/objects/Quote/fields/vlocity_cmt__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activation</fullName>
                <default>true</default>
                <label>Activation</label>
            </value>
            <value>
                <fullName>Change of Plan</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Hardware Change</fullName>
            </value>
            <value>
                <fullName>Hardware Replacement</fullName>
            </value>
            <value>
                <fullName>IP Change</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>