force-app/main/default/objects/Quote/validationRules/x01_Quote_Accepted_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>x01_Quote_Accepted_Change</fullName>
    <active>true</active>
    <description>Ruled fired when a change is made on an Accepted Quote by the Partner</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISPICKVAL(Status, &quot;Accepted&quot;), $Profile.Name = &quot;Partner&quot;)</errorConditionFormula>
    <errorMessage>Sie können ein Angebot, das Sie gewonnen haben, nicht ändern (Error x01).</errorMessage>
</ValidationRule>