force-app/main/default/objects/Quote/listViews/Alle_offenen_Angebote.listView-meta.xml
<ListView>
    <fullName>Alle_offenen_Angebote</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Owner</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>MarketingPhase__c</columns>
    <columns>SubType__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>vlocity_cmt__OneTimeTotal__c</columns>
    <columns>vlocity_cmt__RecurringTotal__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>EffectiveDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>notEqual</operation>
        <value>Accepted,Expired,Withdrawn,Denied</value>
    </filters>
    <label>Alle offenen Angebote</label>
</ListView>