force-app/main/default/objects/Quote/listViews/Meine_akzeptierten_Angebote.listView-meta.xml
<ListView>
    <fullName>Meine_akzeptierten_Angebote</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>MarketingPhase__c</columns>
    <columns>SubType__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>vlocity_cmt__OneTimeTotal__c</columns>
    <columns>vlocity_cmt__RecurringTotal__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>EffectiveDate__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Meine akzeptierten Angebote</label>
</ListView>